releases/kubernetes-dashboard/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http
  namespace: kubernetes-dashboard
spec:
  parentRefs:
    - name: gateway
      namespace: istio-ingress
  hostnames: [ "k8s.shamrock.systems" ]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: oauth2-proxy
          port: 80
